work in prgress

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="flex">
+    <header class="head-flex">
         <div>
-            <h2>
+            <h2 class="my-logo">
                 &lt;F8_Makinde&gt;
             </h2>
         </div>
       <div>
-        <ul>
+        <ul class="head-flex">
             <li>
                 Home
             </li>
@@ -31,17 +31,54 @@
         </ul>
       </div>
     </header>
-    <main>
+    <main class="main-flex">
         <div>
-            <img src="" alt="">
+            <img src="my portfolio pics.png" alt="" class="my-image">
         </div>
         <div>
             <h1>Hi there !</h1>
             <p>
-                
+                An optimistic Junior Frontend Developer who is passionate
+                to develop innovative Software applications that expedite the
+                efficiency and effectiveness of organizational success. . Highly
+                organized with strong time-management and prioritizing
+                abilities. Always willing to learn new technologies. Love to
+                build beautiful application interfaces that are responsive and
+                interactive.
             </p>
         </div>
     </main>
+    <section>
+        <div>
+            <h2>
+                My Career So Far
+            </h2>
+            <ul>
+                <li>Used markup languages like HTML to create user-friendly web pages</li>
+                    <li>Consumed 3rd party API</li>
+                  <li>Maintained and improved websites by implementing some javascript codes that made it interactive.</li>
+                  <li>Determine the structure and design of web pages.</li>
+            </ul>
+        </div>
+        <div>
+            <h2>Skills set</h2>
+            <ul>
+                <li>HTML 5</li>
+                <li>CSS 3</li>
+                <li>Javascript</li>
+                <li>Bootstrap</li>
+                <li>Git/Github</li>
+                <li>Figma</li>
+                <li>Wireframe and prototyping</li>
+                <li>Ui Design</li>
+                <li>Critical thinking</li>
+                <li>Fast learner</li>
+                <li>Team Work</li>
+                <li>Great Communication skills</li>
+                <li>Time Management.</li>
+            </ul>
+        </div>
+    </section>
 
 </body>
 </html>
