work in prgress

--- a/index.html
+++ b/index.html
@@ -32,10 +32,8 @@
       </div>
     </header>
     <main class="main-flex">
-        <div>
-            <img src="my portfolio pics.png" alt="" class="my-image">
-        </div>
-        <div>
+      
+        <div class="about">
             <h1>Hi there !</h1>
             <p>
                 An optimistic Junior Frontend Developer who is passionate
@@ -46,6 +44,9 @@
                 build beautiful application interfaces that are responsive and
                 interactive.
             </p>
+        </div>
+        <div class="image-div">
+            <img src="my portfolio pics.png" alt="" class="my-image">
         </div>
     </main>
     <section>
