styling the page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -49,8 +52,8 @@
             <img src="my portfolio pics.png" alt="" class="my-image">
         </div>
     </main>
-    <section>
-        <div>
+    <section class="section-flex">
+        <div class="content">
             <h2>
                 My Career So Far
             </h2>
@@ -62,21 +65,18 @@
             </ul>
         </div>
         <div>
-            <h2>Skills set</h2>
-            <ul>
-                <li>HTML 5</li>
-                <li>CSS 3</li>
-                <li>Javascript</li>
-                <li>Bootstrap</li>
-                <li>Git/Github</li>
-                <li>Figma</li>
-                <li>Wireframe and prototyping</li>
-                <li>Ui Design</li>
-                <li>Critical thinking</li>
-                <li>Fast learner</li>
-                <li>Team Work</li>
-                <li>Great Communication skills</li>
-                <li>Time Management.</li>
+            <ul class="skill-flex">
+                <li class="skill">HTML</li>
+                <li class="skill">CSS</li>
+                <li class="skill">Javascript</li>
+                <li class="skill">Bootstrap</li>
+           
+            </ul>
+            <ul class="skill-2-flex"> 
+                <li class="skill">Git/Github</li>
+                <li class="skill">Figma</li>
+                <li class="skill">Wireframe and prototyping</li>
+                <li class="skill">Ui Design</li>
             </ul>
         </div>
     </section>
